# ACE_TAO

./: .gitignore  CMakeLists.txt
ACE/: CMakeLists.txt
ACE/ace/: ACE_crc32.cpp  ANSI_Escape.cpp  ANSI_Escape.h  CMakeLists.txt  Process_Manager.cpp  ace.mpc
ACE/apps/gperf/: CMakeLists.txt
TAO/: CMakeLists.txt
TAO/TAO_IDL/: CMakeLists.txt  tao_idl.cpp
TAO/TAO_IDL/be/: be_codegen.cpp
TAO/TAO_IDL/include/: idl_global.h
TAO/TAO_IDL/util/: utl_err.cpp  utl_global.cpp
TAO/cmake/: tao_idl.cmake
TAO/tao/: CMakeLists.txt  IIOP_Factory.cpp
TAO/tao/AnyTypeCode/: CMakeLists.txt
TAO/tao/Valuetype/: CMakeLists.txt
TAO/tests/IDLv4/annotations/: annotation_tests.cpp
