cmake_minimum_required(VERSION 3.23...3.27)
project(tao_idl LANGUAGES CXX)

add_library(TAO_IDL_FE
  ast/ast_annotation_appl.cpp
  ast/ast_annotation_appls.cpp
  ast/ast_annotation_decl.cpp
  ast/ast_annotation_member.cpp
  ast/ast_argument.cpp
  ast/ast_array.cpp
  ast/ast_attribute.cpp
  ast/ast_check.cpp
  ast/ast_component.cpp
  ast/ast_component_fwd.cpp
  ast/ast_concrete_type.cpp
  ast/ast_connector.cpp
  ast/ast_constant.cpp
  ast/ast_consumes.cpp
  ast/ast_decl.cpp
  ast/ast_emits.cpp
  ast/ast_enum.cpp
  ast/ast_enum_val.cpp
  ast/ast_eventtype.cpp
  ast/ast_eventtype_fwd.cpp
  ast/ast_exception.cpp
  ast/ast_expression.cpp
  ast/ast_extended_port.cpp
  ast/ast_factory.cpp
  ast/ast_field.cpp
  ast/ast_finder.cpp
  ast/ast_fixed.cpp
  ast/ast_generator.cpp
  ast/ast_home.cpp
  ast/ast_interface.cpp
  ast/ast_interface_fwd.cpp
  ast/ast_map.cpp
  ast/ast_mirror_port.cpp
  ast/ast_module.cpp
  ast/ast_native.cpp
  ast/ast_operation.cpp
  ast/ast_param_holder.cpp
  ast/ast_porttype.cpp
  ast/ast_predefined_type.cpp
  ast/ast_provides.cpp
  ast/ast_publishes.cpp
  ast/ast_recursive.cpp
  ast/ast_root.cpp
  ast/ast_sequence.cpp
  ast/ast_string.cpp
  ast/ast_structure.cpp
  ast/ast_structure_fwd.cpp
  ast/ast_template_module.cpp
  ast/ast_template_module_inst.cpp
  ast/ast_template_module_ref.cpp
  ast/ast_type.cpp
  ast/ast_typedef.cpp
  ast/ast_union.cpp
  ast/ast_union_branch.cpp
  ast/ast_union_fwd.cpp
  ast/ast_union_label.cpp
  ast/ast_uses.cpp
  ast/ast_valuebox.cpp
  ast/ast_valuetype.cpp
  ast/ast_valuetype_fwd.cpp
  ast/ast_visitor.cpp
  ast/ast_visitor_context.cpp
  ast/ast_visitor_reifying.cpp
  ast/ast_visitor_tmpl_module_inst.cpp
  ast/ast_visitor_tmpl_module_ref.cpp
  fe/fe_component_header.cpp
  fe/fe_declarator.cpp
  fe/fe_extern.cpp
  fe/fe_global.cpp
  fe/fe_home_header.cpp
  fe/fe_init.cpp
  fe/fe_interface_header.cpp
  fe/fe_lookup.cpp
  fe/fe_obv_header.cpp
  fe/fe_private.cpp
  fe/fe_utils.cpp
  fe/idl.tab.cpp
  fe/idl.yy.cpp
  narrow/narrow.cpp
  util/idl_version.cpp
  util/utl_decllist.cpp
  util/utl_err.cpp
  util/utl_exceptlist.cpp
  util/utl_exprlist.cpp
  util/utl_global.cpp
  util/utl_identifier.cpp
  util/utl_idlist.cpp
  util/utl_indenter.cpp
  util/utl_labellist.cpp
  util/utl_list.cpp
  util/utl_namelist.cpp
  util/utl_scope.cpp
  util/utl_stack.cpp
  util/utl_string.cpp
  util/utl_strlist.cpp
)
add_library(TAO::IDL_FE ALIAS TAO_IDL_FE)
target_link_libraries(TAO_IDL_FE PUBLIC ACE)
target_include_directories(TAO_IDL_FE
  PUBLIC
    "${TAO_SOURCE_DIR}"
    include
    fe
    be_include
)

add_library(TAO_IDL_BE
  be/be_argument.cpp
  be/be_array.cpp
  be/be_attribute.cpp
  be/be_codegen.cpp
  be/be_component.cpp
  be/be_component_fwd.cpp
  be/be_connector.cpp
  be/be_constant.cpp
  be/be_consumes.cpp
  be/be_decl.cpp
  be/be_emits.cpp
  be/be_enum.cpp
  be/be_enum_val.cpp
  be/be_eventtype.cpp
  be/be_eventtype_fwd.cpp
  be/be_exception.cpp
  be/be_expression.cpp
  be/be_extended_port.cpp
  be/be_factory.cpp
  be/be_field.cpp
  be/be_finder.cpp
  be/be_fixed.cpp
  be/be_generator.cpp
  be/be_global.cpp
  be/be_helper.cpp
  be/be_home.cpp
  be/be_identifier_helper.cpp
  be/be_init.cpp
  be/be_interface.cpp
  be/be_interface_fwd.cpp
  be/be_map.cpp
  be/be_mirror_port.cpp
  be/be_module.cpp
  be/be_native.cpp
  be/be_null_return_emitter.cpp
  be/be_operation.cpp
  be/be_param_holder.cpp
  be/be_porttype.cpp
  be/be_predefined_type.cpp
  be/be_produce.cpp
  be/be_provides.cpp
  be/be_publishes.cpp
  be/be_root.cpp
  be/be_scope.cpp
  be/be_sequence.cpp
  be/be_string.cpp
  be/be_structure.cpp
  be/be_structure_fwd.cpp
  be/be_template_module.cpp
  be/be_template_module_inst.cpp
  be/be_template_module_ref.cpp
  be/be_tmplinst.cpp
  be/be_type.cpp
  be/be_typedef.cpp
  be/be_union.cpp
  be/be_union_branch.cpp
  be/be_union_fwd.cpp
  be/be_union_label.cpp
  be/be_uses.cpp
  be/be_util.cpp
  be/be_valuebox.cpp
  be/be_valuetype.cpp
  be/be_valuetype_fwd.cpp
  be/be_visitor.cpp
  be/be_visitor_amh_pre_proc.cpp
  be/be_visitor_ami_pre_proc.cpp
  be/be_visitor_any_extracted_type_decl.cpp
  be/be_visitor_arg_traits.cpp
  be/be_visitor_argument/arglist.cpp
  be/be_visitor_argument/argument.cpp
  be/be_visitor_argument/invoke_cs.cpp
  be/be_visitor_argument/marshal_ss.cpp
  be/be_visitor_argument/upcall_ss.cpp
  be/be_visitor_argument/vardecl_ss.cpp
  be/be_visitor_array/any_op_ch.cpp
  be/be_visitor_array/any_op_cs.cpp
  be/be_visitor_array/array.cpp
  be/be_visitor_array/array_ch.cpp
  be/be_visitor_array/array_ci.cpp
  be/be_visitor_array/array_cs.cpp
  be/be_visitor_array/cdr_op_ch.cpp
  be/be_visitor_array/cdr_op_cs.cpp
  be/be_visitor_attr_assign.cpp
  be/be_visitor_attr_init.cpp
  be/be_visitor_attr_return.cpp
  be/be_visitor_attr_setarg_type.cpp
  be/be_visitor_attribute/attribute.cpp
  be/be_visitor_attribute/ccm_init.cpp
  be/be_visitor_attribute/set_from_extracted.cpp
  be/be_visitor_ccm_pre_proc.cpp
  be/be_visitor_component/component.cpp
  be/be_visitor_component/component_ami_rh_ex_base.cpp
  be/be_visitor_component/component_ami_rh_exh.cpp
  be/be_visitor_component/component_ami_rh_exs.cpp
  be/be_visitor_component/component_ex_idl.cpp
  be/be_visitor_component/component_exh.cpp
  be/be_visitor_component/component_exs.cpp
  be/be_visitor_component/component_svh.cpp
  be/be_visitor_component/component_svs.cpp
  be/be_visitor_component/component_svth.cpp
  be/be_visitor_component/component_svts.cpp
  be/be_visitor_component/context_ex_idl.cpp
  be/be_visitor_component/context_svth.cpp
  be/be_visitor_component/context_svts.cpp
  be/be_visitor_component/executor_ex_idl.cpp
  be/be_visitor_component/executor_exh.cpp
  be/be_visitor_component/executor_exs.cpp
  be/be_visitor_component/executor_exs_attr_init.cpp
  be/be_visitor_component/executor_private_exh.cpp
  be/be_visitor_component/facet_exh.cpp
  be/be_visitor_component/facet_exs.cpp
  be/be_visitor_component/servant_svh.cpp
  be/be_visitor_component/servant_svs.cpp
  be/be_visitor_component_fwd/any_op_ch.cpp
  be/be_visitor_component_fwd/cdr_op_ch.cpp
  be/be_visitor_component_fwd/component_fwd_ch.cpp
  be/be_visitor_component_scope.cpp
  be/be_visitor_connector/connector_ami_exh.cpp
  be/be_visitor_connector/connector_ami_exs.cpp
  be/be_visitor_connector/connector_dds_ex_base.cpp
  be/be_visitor_connector/connector_dds_exh.cpp
  be/be_visitor_connector/connector_dds_exs.cpp
  be/be_visitor_connector/executor_ami_exh.cpp
  be/be_visitor_connector/executor_ami_exs.cpp
  be/be_visitor_connector/facet_ami_exh.cpp
  be/be_visitor_connector/facet_ami_exs.cpp
  be/be_visitor_constant/constant.cpp
  be/be_visitor_constant/constant_ch.cpp
  be/be_visitor_constant/constant_cs.cpp
  be/be_visitor_context.cpp
  be/be_visitor_dds_ts_idl.cpp
  be/be_visitor_decl.cpp
  be/be_visitor_enum/any_op_ch.cpp
  be/be_visitor_enum/any_op_cs.cpp
  be/be_visitor_enum/cdr_op_ch.cpp
  be/be_visitor_enum/cdr_op_cs.cpp
  be/be_visitor_enum/enum_ch.cpp
  be/be_visitor_enum/enum_cs.cpp
  be/be_visitor_exception/any_op_ch.cpp
  be/be_visitor_exception/any_op_cs.cpp
  be/be_visitor_exception/cdr_op_ch.cpp
  be/be_visitor_exception/cdr_op_cs.cpp
  be/be_visitor_exception/ctor_assign.cpp
  be/be_visitor_exception/exception.cpp
  be/be_visitor_exception/exception_ch.cpp
  be/be_visitor_exception/exception_ci.cpp
  be/be_visitor_exception/exception_cs.cpp
  be/be_visitor_exception/exception_ctor.cpp
  be/be_visitor_field/cdr_op_ch.cpp
  be/be_visitor_field/cdr_op_cs.cpp
  be/be_visitor_field/field_ch.cpp
  be/be_visitor_field/field_ci.cpp
  be/be_visitor_field/field_cs.cpp
  be/be_visitor_home/home_ex_idl.cpp
  be/be_visitor_home/home_exh.cpp
  be/be_visitor_home/home_exs.cpp
  be/be_visitor_home/home_svh.cpp
  be/be_visitor_home/home_svs.cpp
  be/be_visitor_interface/amh_ch.cpp
  be/be_visitor_interface/amh_rh_sh.cpp
  be/be_visitor_interface/amh_rh_ss.cpp
  be/be_visitor_interface/amh_sh.cpp
  be/be_visitor_interface/amh_ss.cpp
  be/be_visitor_interface/ami4ccm_conn_ex_idl.cpp
  be/be_visitor_interface/ami4ccm_rh_ex_idl.cpp
  be/be_visitor_interface/ami4ccm_sendc_ex_idl.cpp
  be/be_visitor_interface/any_op_ch.cpp
  be/be_visitor_interface/any_op_cs.cpp
  be/be_visitor_interface/cdr_op_ch.cpp
  be/be_visitor_interface/cdr_op_cs.cpp
  be/be_visitor_interface/direct_proxy_impl_sh.cpp
  be/be_visitor_interface/direct_proxy_impl_ss.cpp
  be/be_visitor_interface/facet_svth.cpp
  be/be_visitor_interface/facet_svts.cpp
  be/be_visitor_interface/interface.cpp
  be/be_visitor_interface/interface_ch.cpp
  be/be_visitor_interface/interface_ci.cpp
  be/be_visitor_interface/interface_cs.cpp
  be/be_visitor_interface/interface_ex_idl.cpp
  be/be_visitor_interface/interface_ih.cpp
  be/be_visitor_interface/interface_is.cpp
  be/be_visitor_interface/interface_sh.cpp
  be/be_visitor_interface/interface_ss.cpp
  be/be_visitor_interface/interface_svth.cpp
  be/be_visitor_interface/interface_svts.cpp
  be/be_visitor_interface/smart_proxy_ch.cpp
  be/be_visitor_interface/smart_proxy_cs.cpp
  be/be_visitor_interface/tie_sh.cpp
  be/be_visitor_interface/tie_ss.cpp
  be/be_visitor_interface_fwd/any_op_ch.cpp
  be/be_visitor_interface_fwd/cdr_op_ch.cpp
  be/be_visitor_interface_fwd/interface_fwd_ch.cpp
  be/be_visitor_map/buffer_type.cpp
  be/be_visitor_map/cdr_op_ch.cpp
  be/be_visitor_map/cdr_op_cs.cpp
  be/be_visitor_map/map_ch.cpp
  be/be_visitor_map/map_cs.cpp
  be/be_visitor_member_type_decl.cpp
  be/be_visitor_module/any_op.cpp
  be/be_visitor_module/cdr_op.cpp
  be/be_visitor_module/module.cpp
  be/be_visitor_module/module_ch.cpp
  be/be_visitor_module/module_ih.cpp
  be/be_visitor_module/module_sh.cpp
  be/be_visitor_native/native_ch.cpp
  be/be_visitor_null_return_value.cpp
  be/be_visitor_operation/amh_rh_sh.cpp
  be/be_visitor_operation/amh_rh_ss.cpp
  be/be_visitor_operation/amh_sh.cpp
  be/be_visitor_operation/amh_ss.cpp
  be/be_visitor_operation/ami_cs.cpp
  be/be_visitor_operation/ami_handler_reply_stub_operation_cs.cpp
  be/be_visitor_operation/arglist.cpp
  be/be_visitor_operation/argument.cpp
  be/be_visitor_operation/argument_invoke.cpp
  be/be_visitor_operation/argument_marshal.cpp
  be/be_visitor_operation/direct_proxy_impl_ss.cpp
  be/be_visitor_operation/exceptlist_cs.cpp
  be/be_visitor_operation/exceptlist_ss.cpp
  be/be_visitor_operation/operation.cpp
  be/be_visitor_operation/operation_ch.cpp
  be/be_visitor_operation/operation_cs.cpp
  be/be_visitor_operation/operation_exs.cpp
  be/be_visitor_operation/operation_ih.cpp
  be/be_visitor_operation/operation_is.cpp
  be/be_visitor_operation/operation_sh.cpp
  be/be_visitor_operation/operation_ss.cpp
  be/be_visitor_operation/operation_svs.cpp
  be/be_visitor_operation/proxy_impl_xh.cpp
  be/be_visitor_operation/rettype.cpp
  be/be_visitor_operation/rettype_return_cs.cpp
  be/be_visitor_operation/smart_proxy_ch.cpp
  be/be_visitor_operation/smart_proxy_cs.cpp
  be/be_visitor_operation/tie_sh.cpp
  be/be_visitor_operation/tie_ss.cpp
  be/be_visitor_operation/upcall_command_ss.cpp
  be/be_visitor_root/any_op.cpp
  be/be_visitor_root/cdr_op.cpp
  be/be_visitor_root/root.cpp
  be/be_visitor_root/root_ch.cpp
  be/be_visitor_root/root_ci.cpp
  be/be_visitor_root/root_cnh.cpp
  be/be_visitor_root/root_cns.cpp
  be/be_visitor_root/root_cs.cpp
  be/be_visitor_root/root_ex_idl.cpp
  be/be_visitor_root/root_exh.cpp
  be/be_visitor_root/root_exs.cpp
  be/be_visitor_root/root_ih.cpp
  be/be_visitor_root/root_is.cpp
  be/be_visitor_root/root_sh.cpp
  be/be_visitor_root/root_ss.cpp
  be/be_visitor_root/root_sth.cpp
  be/be_visitor_root/root_svh.cpp
  be/be_visitor_root/root_svs.cpp
  be/be_visitor_root/root_svth.cpp
  be/be_visitor_root/root_svts.cpp
  be/be_visitor_scope.cpp
  be/be_visitor_sequence/any_op_ch.cpp
  be/be_visitor_sequence/any_op_cs.cpp
  be/be_visitor_sequence/buffer_type.cpp
  be/be_visitor_sequence/cdr_op_ch.cpp
  be/be_visitor_sequence/cdr_op_cs.cpp
  be/be_visitor_sequence/sequence_base.cpp
  be/be_visitor_sequence/sequence_ch.cpp
  be/be_visitor_sequence/sequence_cs.cpp
  be/be_visitor_structure/any_op_ch.cpp
  be/be_visitor_structure/any_op_cs.cpp
  be/be_visitor_structure/cdr_op_ch.cpp
  be/be_visitor_structure/cdr_op_cs.cpp
  be/be_visitor_structure/structure.cpp
  be/be_visitor_structure/structure_ch.cpp
  be/be_visitor_structure/structure_ci.cpp
  be/be_visitor_structure/structure_cs.cpp
  be/be_visitor_structure_fwd/structure_fwd_ch.cpp
  be/be_visitor_template_export.cpp
  be/be_visitor_traits.cpp
  be/be_visitor_typecode/alias_typecode.cpp
  be/be_visitor_typecode/enum_typecode.cpp
  be/be_visitor_typecode/objref_typecode.cpp
  be/be_visitor_typecode/struct_typecode.cpp
  be/be_visitor_typecode/typecode_decl.cpp
  be/be_visitor_typecode/typecode_defn.cpp
  be/be_visitor_typecode/union_typecode.cpp
  be/be_visitor_typecode/value_typecode.cpp
  be/be_visitor_typedef/any_op_ch.cpp
  be/be_visitor_typedef/any_op_cs.cpp
  be/be_visitor_typedef/cdr_op_ch.cpp
  be/be_visitor_typedef/cdr_op_cs.cpp
  be/be_visitor_typedef/typedef.cpp
  be/be_visitor_typedef/typedef_ch.cpp
  be/be_visitor_typedef/typedef_ci.cpp
  be/be_visitor_typedef/typedef_cs.cpp
  be/be_visitor_union/any_op_ch.cpp
  be/be_visitor_union/any_op_cs.cpp
  be/be_visitor_union/cdr_op_ch.cpp
  be/be_visitor_union/cdr_op_cs.cpp
  be/be_visitor_union/discriminant_ch.cpp
  be/be_visitor_union/discriminant_ci.cpp
  be/be_visitor_union/discriminant_cs.cpp
  be/be_visitor_union/union.cpp
  be/be_visitor_union/union_ch.cpp
  be/be_visitor_union/union_ci.cpp
  be/be_visitor_union/union_cs.cpp
  be/be_visitor_union_branch/cdr_op_ch.cpp
  be/be_visitor_union_branch/cdr_op_cs.cpp
  be/be_visitor_union_branch/private_ch.cpp
  be/be_visitor_union_branch/public_assign_cs.cpp
  be/be_visitor_union_branch/public_ch.cpp
  be/be_visitor_union_branch/public_ci.cpp
  be/be_visitor_union_branch/public_constructor_cs.cpp
  be/be_visitor_union_branch/public_cs.cpp
  be/be_visitor_union_branch/public_reset_cs.cpp
  be/be_visitor_union_fwd/union_fwd_ch.cpp
  be/be_visitor_valuebox/any_op_ch.cpp
  be/be_visitor_valuebox/any_op_cs.cpp
  be/be_visitor_valuebox/cdr_op_ch.cpp
  be/be_visitor_valuebox/cdr_op_cs.cpp
  be/be_visitor_valuebox/field_ch.cpp
  be/be_visitor_valuebox/field_ci.cpp
  be/be_visitor_valuebox/union_member_ci.cpp
  be/be_visitor_valuebox/valuebox.cpp
  be/be_visitor_valuebox/valuebox_ch.cpp
  be/be_visitor_valuebox/valuebox_ci.cpp
  be/be_visitor_valuebox/valuebox_cs.cpp
  be/be_visitor_valuetype/any_op_ch.cpp
  be/be_visitor_valuetype/any_op_cs.cpp
  be/be_visitor_valuetype/arglist.cpp
  be/be_visitor_valuetype/cdr_op_ch.cpp
  be/be_visitor_valuetype/cdr_op_cs.cpp
  be/be_visitor_valuetype/field_cdr_ch.cpp
  be/be_visitor_valuetype/field_cdr_cs.cpp
  be/be_visitor_valuetype/field_ch.cpp
  be/be_visitor_valuetype/field_ci.cpp
  be/be_visitor_valuetype/field_cs.cpp
  be/be_visitor_valuetype/marshal_ch.cpp
  be/be_visitor_valuetype/marshal_cs.cpp
  be/be_visitor_valuetype/obv_module.cpp
  be/be_visitor_valuetype/valuetype.cpp
  be/be_visitor_valuetype/valuetype_ch.cpp
  be/be_visitor_valuetype/valuetype_ci.cpp
  be/be_visitor_valuetype/valuetype_cs.cpp
  be/be_visitor_valuetype/valuetype_init.cpp
  be/be_visitor_valuetype/valuetype_init_arglist_ch.cpp
  be/be_visitor_valuetype/valuetype_init_ch.cpp
  be/be_visitor_valuetype/valuetype_init_ci.cpp
  be/be_visitor_valuetype/valuetype_init_cs.cpp
  be/be_visitor_valuetype/valuetype_obv_ch.cpp
  be/be_visitor_valuetype/valuetype_obv_ci.cpp
  be/be_visitor_valuetype/valuetype_obv_cs.cpp
  be/be_visitor_valuetype/valuetype_sh.cpp
  be/be_visitor_valuetype/valuetype_ss.cpp
  be/be_visitor_valuetype_fwd/any_op_ch.cpp
  be/be_visitor_valuetype_fwd/cdr_op_ch.cpp
  be/be_visitor_valuetype_fwd/valuetype_fwd_ch.cpp
  be/be_visitor_xplicit_pre_proc.cpp
)
target_link_libraries(TAO_IDL_BE PUBLIC TAO_IDL_FE)

add_executable(tao_idl
  driver/drv_args.cpp
  driver/drv_preproc.cpp
  tao_idl.cpp
)
add_executable("TAO::tao_idl" ALIAS tao_idl)
add_dependencies(tao_idl ace_gperf)
target_link_libraries(tao_idl PUBLIC TAO_IDL_BE)
target_link_libraries(tao_idl PRIVATE TAO_IDL_FE)
